--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,33 +1,50 @@
 {
-"HOME": {
+  "HOME": {
     "COMP": "Competência em produtos agrícolas africanos",
     "SOST": "Sustentabilidade econômica, social e ecológica!",
     "DESC": "Descubra nossos produtos",
     "AFRI": "AFRI AGRARIA representa o comércio de matérias-primas naturais em nível mundial. Somos fornecedores de matéria-prima para a indústria cosmética. Nossos principais produtos são Moringa Orgânica, Baobab e Hibiscus. As mais altas exigências de nossos clientes em qualidade e preço são nossa prioridade.",
     "LASI": "As ideias ecológicas e a sustentabilidade da plantação devem garantir que colheremos um futuro fértil e consciente."
-    },
-    "PRODUCTOS": {
+  },
+  "PRODUCTOS": {
     "NUESTROS": "Nossos Produtos",
     "NUESTRAS": "Nossas matérias-primas vêm de agricultura orgânica e sustentável, garantindo a qualidade de excelência em seus produtos. Nossas matérias-primas vêm de agricultura orgânica e sustentável, garantindo a qualidade de excelência em seus produtos. Seu potencial vai além de seu alto valor nutricional e terapêutico e alcança várias indústrias, incluindo cosméticos.",
     "ANACARDOS": "Um dos benefícios dos amendoins é que já contém uma dose significativa de ferro, importante para estimular o sistema imunológico. O mineral é importante para prevenir a anemia e a falta de energia. Existem vários benefícios dos amendoins, incluindo saúde ocular.",
     "HIBISCO": "Benefícios do óleo de hibisco O principal benefício do óleo de hibisco está relacionado à hidratação e saúde do cabelo, mas também é bom para a pele e ajuda a reduzir manchas, seja no rosto ou mesmo marcas como estrias e celulite. Por isso, este óleo é um verdadeiro fenômeno.",
     "BAOBAB": "Valorizado há séculos na África por suas propriedades hidratantes, o óleo de baobab é um ingrediente ideal para uso em produtos para cuidados com a pele e cabelo. Absorção rápida, não obstrui os poros e é muito hidratante e calmante.",
     "MORINGA": "Obtido por prensagem a frio das sementes da planta, o óleo de Moringa é a última aposta na indústria cosmética. Com propriedades hidratantes e antioxidantes, também possui outras propriedades nutricionais, como o alto teor de proteínas, vitaminas A e C e altas concentrações de sais minerais e ácidos graxos essenciais para a saúde da pele, unhas e cabelos.",
-"VERMAS": "Veja mais"
+    "VERMAS": "Veja mais"
+  },
+  "BAOB-DESC": {
+    "PARANADIE": "Para ninguém é novo que o óleo de Baobab com suas particularidades únicas é um grande aliado na indústria do cuidado da beleza. Entre eles, o Óleo de Baobab tem se destacado cada vez mais por oferecer benefícios, tanto para cabelo, pele e unhas, mostrando ser um produto versátil e valioso. O baobab é uma árvore originária da África e muito apreciada; e das sementes de seus frutos é extraído este óleo, que tem propriedades preciosas para fins cosméticos, já que é rico em vitaminas A e E, omega 6 e 9 entre outros elementos que lhe conferem propriedades antioxidantes, nutritivas, regeneradoras, emolientes, poder hidratante e muito mais. Com origem em Guiné-Bissau, e fabricação na Alemanha com tecnologia de ponta e testes de laboratório, e se submeteram a testes de controle de qualidade. Óleo de baobab com a marca de Liane Wecker GRATITUDE surgiu como um novo produto de beleza devido a suas valiosas propriedades e extremamente versátil. Estes são os benefícios do óleo de Baobab e como usá-lo para cada propósito. Este rico óleo oferece benefícios tanto para o cabelo quanto para a pele quando é aplicado sobre o cabelo e quando é usado sobre a pele, os lábios e as unhas. os segredos estão na forma de utilização, que pode variar de acordo com cada objetivo.",
+    "ASEGURA": "Garante mais brilho e beleza ao cabelo. Fonte de ácidos graxos, o óleo de baobab é fino e denso, facilmente absorvido pela fibra capilar, especialmente aumentando o brilho e a flexibilidade das mechas, e diminuindo o frizz e a aparição de pontas abertas. Modo de uso: como Leave-in. Aplique um pouco de Óleo de Baobab em suas mãos e espalhe por todo o comprimento e pontas do cabelo, sem enxaguar depois.",
+    "ELACEITE": "O óleo de Baobab pode ser usado diretamente na face, pois é um óleo fino que é rapidamente absorvido. Ele ajudará a deixar a pele visivelmente mais hidratada e bonita.",
+    "ELACEITE2": "O óleo de baobab tem uma boa absorção, pode ser usado com sucesso na pele, garantindo uma hidratação ótima sem deixar a pele extremamente oleosa. Previne as estrias porque é altamente hidratante, protege a pele da perda de água, o óleo de baobab pode ser usado regularmente, ajuda a estimular o colágeno, prevenir as estrias. Pode ser usado durante toda a gravidez. Modo de uso: aplicar um pouco de óleo de Baobab diretamente na área desejada (por exemplo, barriga) durante ou logo após o banho.",
+    "MAXIMIZA": "Maximiza a máscara para o cuidado dos cabelos",
+    "PARAQUIENES": "Para aqueles que já têm o hábito de fazer tratamentos capilares em casa, o óleo de Baobab pode ser facilmente adicionado à máscara, potencializando seus benefícios, especialmente no que diz respeito à hidratação. Modo de uso: adicionar de 3 a 4 gotas de óleo de Baobab à máscara capilar antes de aplicá-la nos cabelos.",
+    "CUIDADO": "Cuidado das unhas",
+    "ELACEITEDE": "O óleo de baobab oferece benefícios gerais, que vão desde hidratar a cutícula até fortalecer as unhas, evitando que elas esfriem facilmente. Modo de uso: aplicar diariamente um pouco de óleo de Baobab diretamente nas unhas sem necessidade de enxaguar depois."
+  },
+    "ANAC-DESC":{
+    "LANUEZ":"A noz saudável que vai te encher de energia",
+    "LOSA":"As castanhas-de-caju são as nozes da planta do caju. Essa planta é originária da América do Sul e é cultivada principalmente no Brasil, Índia e Nigéria. As castanhas-de-caju são pequenas nozes com uma casca dura que se encontra dentro de uma casca cheia de ácido úrico. Essas nozes são comestíveis e têm um sabor doce e levemente salgado. As castanhas-de-caju são comumente usadas na culinária para fazer sobremesas, molhos, massas e como um lanche saudável, também são usadas na indústria cosmética e na elaboração de produtos para cuidado de cabelo.",
+    "BENE":"Benefícios",
+    "BENE1":"As castanhas-de-caju são ricas em fibra dietética, o que pode ajudar a regular o trânsito intestinal e melhorar a digestão.",
+    "BENE2":"Contêm uma grande quantidade de magnésio, o que pode ajudar a reduzir o estresse, melhorar a saúde do coração e fortalecer os ossos.",
+    "BENE3":"As castanhas-de-caju são uma excelente fonte de vitamina E, um poderoso antioxidante que ajuda a proteger a pele dos danos do sol e a prevenir o envelhecimento precoce.",
+    "BENE4":"Contêm uma grande quantidade de manganês, um mineral essencial para a formação de ossos e tecidos conectivos.",
+    "BENE5":"O ácido oleico presente nas castanhas-de-caju pode ajudar a reduzir o colesterol ruim e melhorar a saúde do coração.",
+    "BENE6":"São ricas em potássio, um mineral que ajuda a controlar a pressão arterial e a manter o equilíbrio líquido no corpo.",
+    "BENE7":"Também são ricas em ácido fólico, um nutriente essencial para a saúde do sistema nervoso e para a formação de glóbulos vermelhos, e em antioxidantes, especialmente polifenóis e carotenoides, estes ajudam a prevenir o dano celular e melhorar a saúde em geral.",
+    "COMPRAR":"Comprar",
+    "REGRESAR":"Voltar"
     },
-    "BAOB-DESC":{
-        "PARANADIE":"Para ninguém é novo que o óleo de Baobab com suas particularidades únicas é um grande aliado na indústria do cuidado da beleza. Entre eles, o Óleo de Baobab tem se destacado cada vez mais por oferecer benefícios, tanto para cabelo, pele e unhas, mostrando ser um produto versátil e valioso. O baobab é uma árvore originária da África e muito apreciada; e das sementes de seus frutos é extraído este óleo, que tem propriedades preciosas para fins cosméticos, já que é rico em vitaminas A e E, omega 6 e 9 entre outros elementos que lhe conferem propriedades antioxidantes, nutritivas, regeneradoras, emolientes, poder hidratante e muito mais. Com origem em Guiné-Bissau, e fabricação na Alemanha com tecnologia de ponta e testes de laboratório, e se submeteram a testes de controle de qualidade. Óleo de baobab com a marca de Liane Wecker GRATITUDE surgiu como um novo produto de beleza devido a suas valiosas propriedades e extremamente versátil. Estes são os benefícios do óleo de Baobab e como usá-lo para cada propósito. Este rico óleo oferece benefícios tanto para o cabelo quanto para a pele quando é aplicado sobre o cabelo e quando é usado sobre a pele, os lábios e as unhas. os segredos estão na forma de utilização, que pode variar de acordo com cada objetivo.",
-        "ASEGURA":"Garante mais brilho e beleza ao cabelo. Fonte de ácidos graxos, o óleo de baobab é fino e denso, facilmente absorvido pela fibra capilar, especialmente aumentando o brilho e a flexibilidade das mechas, e diminuindo o frizz e a aparição de pontas abertas. Modo de uso: como Leave-in. Aplique um pouco de Óleo de Baobab em suas mãos e espalhe por todo o comprimento e pontas do cabelo, sem enxaguar depois.",
-        "ELACEITE":"O óleo de Baobab pode ser usado diretamente na face, pois é um óleo fino que é rapidamente absorvido. Ele ajudará a deixar a pele visivelmente mais hidratada e bonita.",
-        "ELACEITE2":"O óleo de baobab tem uma boa absorção, pode ser usado com sucesso na pele, garantindo uma hidratação ótima sem deixar a pele extremamente oleosa. Previne as estrias porque é altamente hidratante, protege a pele da perda de água, o óleo de baobab pode ser usado regularmente, ajuda a estimular o colágeno, prevenir as estrias. Pode ser usado durante toda a gravidez. Modo de uso: aplicar um pouco de óleo de Baobab diretamente na área desejada (por exemplo, barriga) durante ou logo após o banho.",
-"MAXIMIZA":"Maximiza a máscara para o cuidado dos cabelos",
-"PARAQUIENES":"Para aqueles que já têm o hábito de fazer tratamentos capilares em casa, o óleo de Baobab pode ser facilmente adicionado à máscara, potencializando seus benefícios, especialmente no que diz respeito à hidratação. Modo de uso: adicionar de 3 a 4 gotas de óleo de Baobab à máscara capilar antes de aplicá-la nos cabelos.",
-"CUIDADO":"Cuidado das unhas",
-"ELACEITEDE":"O óleo de baobab oferece benefícios gerais, que vão desde hidratar a cutícula até fortalecer as unhas, evitando que elas esfriem facilmente. Modo de uso: aplicar diariamente um pouco de óleo de Baobab diretamente nas unhas sem necessidade de enxaguar depois."
-    }}    
-        
-        
-        
-        
-
-
+    "SHOP":{
+        "AGRE":"Adicionar ao carrinho",
+        "DETA" :"Detalhes do produto"
+    }
+    
+    
+    
+    
+}
