--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -42,7 +42,13 @@
     "SHOP":{
         "AGRE":"Adicionar ao carrinho",
         "DETA" :"Detalhes do produto"
-    }
+    },
+    "CART":{
+      "VACIAR":"Esvaziar Carrinho",
+      "CONTINUAR":"Continuar compra",
+      "SALIR":"Sair",
+      "PAGAR": "Pagar"
+      }
     
     
     
