--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,21 +1,21 @@
 {
-    "HOME":{
-"COMP":"Competencia en productos agrícolas africanoss", 
-"SOST":"¡Sostenibilidad económica, social y ecológica!",
-"DESC":"Descubra nuestros productos",
-"AFRI":"AFRI AGRARIA representa el comercio de materias primas naturales a nivel mundial. Somos proveedores de materia prima para la industria cosmética. Nuestros principales productos son Moringa Organic, Baobab e Hibiscus. Las máximas exigencias de nuestros clientes en calidad y precio son nuestra prioridad.",
-"LASI" :"Las ideas ecológicas y la sustentabilidad de la siembra deben asegurar que cosecharemos un futuro fructífero y consciente."
+    "HOME": {
+    "COMP": "Competence in African Agricultural Products",
+    "SOST": "Economic, social and ecological sustainability!",
+    "DESC": "Discover our products",
+    "AFRI": "AFRI AGRARIA represents global trade of natural raw materials. We are raw material suppliers for the cosmetic industry. Our main products are Organic Moringa, Baobab and Hibiscus. Our customers' maximum demands for quality and price are our priority.",
+    "LASI": "Ecological ideas and sustainable planting must ensure that we harvest a fruitful and conscious future."
     },
-    "PRODUCTOS":{
-        "NUESTROS":"Nuestros Productos",
-        "NUESTRAS":"Nuestras materias primas provienen de agricultura orgánica y sustentable, asegurando la calidad de excelencia en sus productos. Nuestras materias primas provienen de agricultura orgánica y sustentable, asegurando la calidad de excelencia en sus productos. Su potencial va más allá de su alto valor nutricional y terapéutico y alcanza a varias industrias, incluida la cosmética.",
-        "ANACARDOS":"Uno de los beneficios de los anacardos es que ya tiene una dosis significativa de hierro, importante para estimular el sistema inmunológico. El mineral es importante para prevenir la anemia y la falta de energía. Hay varios beneficios de los anacardos, incluida la salud ocular.",
-        "HIBISCO":"Beneficios del aceite de hibisco El principal beneficio del aceite de hibisco está relacionado con la hidratación y salud del cabello, pero además también es bueno para la piel y ayuda a reducir las manchas, ya sean del rostro o incluso marcas como estrías y celulitis Por eso este aceite es un auténtico fenómeno.",
-        "BAOBAB":"Valorado durante siglos en África por sus propiedades hidratantes, el aceite de baobab es un ingrediente ideal para su uso en productos para el cuidado de la piel y el cabello. Rápida absorción, no obstruye los poros y es muy hidratante y calmante.",
-        "MORINGA":"Obtenido por prensado en frío de las semillas de la planta, el aceite de Moringa es la última apuesta en la industria cosmética. Con propiedades hidratantes y antioxidantes, también tiene otras propiedades nutricionales como su alto contenido en proteínas, vitaminas A y C, y altas concentraciones de sales minerales y ácidos grasos esenciales para la salud de la piel, las uñas y el cabello.",
-        "VERMAS":"Ver mas"
-     },
-     "BAOB-DESC":{
+    "PRODUCTOS": {
+    "NUESTROS": "Our Products",
+    "NUESTRAS": "Our raw materials come from organic and sustainable agriculture, ensuring the excellence quality in their products. Our raw materials come from organic and sustainable agriculture, ensuring the excellence quality in their products. Its potential goes beyond its high nutritional and therapeutic value and reaches various industries, including cosmetics.",
+    "ANACARDOS": "One of the advantages of cashews is that it already has a significant dose of iron, important to stimulate the immune system. The mineral is important to prevent anemia and lack of energy. There are several advantages of cashews, including eye health.",
+    "HIBISCO": "Benefits of hibiscus oil The main advantage of hibiscus oil is related to the hydration and health of the hair, but it is also good for the skin and helps to reduce spots, whether on the face or even marks such as stretch marks and cellulite. That's why this oil is a real phenomenon.",
+    "BAOBAB": "Valued for centuries in Africa for its moisturizing properties, baobab oil is an ideal ingredient for use in skin and hair care products. Quick absorption, does not clog pores and is very moisturizing and soothing.",
+    "MORINGA": "Obtained by cold pressing the seeds of the plant, Moringa oil is the latest bet in the cosmetics industry. With moisturizing and antioxidant properties, it also has other nutritional properties such as its high protein content, vitamins A and C, and high concentrations of mineral salts and essential fatty acids for the health of skin, nails and hair.",
+    "VERMAS": "See more"
+    },
+    "BAOB-DESC":{
         "PARANADIE":"Para nadie es nuevo que el aceite de Baobab con sus únicas particularidades es un gran aliado en la industria del cuidado de la belleza. Entre ellos, el Aceite de Baobab se ha destacado cada vez más por ofrecer beneficios, tanto para cabello, piel y uñas, demostrando ser un producto versátil y valioso. El baobab es un árbol originario de África y muy apreciado; y de las semillas de sus frutos se extrae este aceite, que tiene propiedades preciosas para fines cosméticos, ya que es rico en vitaminas A y E, omega 6 y 9 entre otros elementos que le confieren propiedades antioxidantes, nutritivas, regeneradoras, emolientes, poder hidratante y mucho más. Con origen en Guinea-Bissau, y fabricación en Alemania con tecnología de punta y pruebas de laboratorio, y se sometieron a pruebas de control de calidad. Aceite de baobab con la marca de Liane Wecker GRATITUDE surgió como un nuevo producto de belleza debido a su valiosas propiedades y extremadamente versátil. Estos son los beneficios del aceite de Baobab y cómo usarlo para cada propósito. Este rico aceite ofrece beneficios tanto para el cabello como para la piel cuando se aplica sobre el cabello y cuando se usa sobre la piel, los labios y las uñas. los secretos mienten en la forma de utilización, que puede variar según cada objetivo.",
         "ASEGURA":"Asegura más brillo y belleza al cabello. Fuente de ácidos grasos, el aceite de baobab es fino y denso, fácilmente absorbido por la fibra capilar, especialmente aumentando el brillo y la flexibilidad de las hebras, y disminuyendo el encrespamiento y la aparición de puntas abiertas. Modo de empleo: como Leave-in. Aplique un poco de Aceite de Baobab en sus manos y extiéndalo por toda la largo y puntas del cabello, sin enjuagar después.",
         "ELACEITE":"El aceite de Baobab se puede usar directamente en la cara, porque es un aceite fino que es rápidamente absorbido. Ayudará a dejar la piel visiblemente más hidratada y bonita.",
@@ -41,14 +41,14 @@
          "REGRESAR":"Regresar"
 
      },
-    "SHOP":{
-        "AGRE":"Agregar al Carrito",
-        "DETA" :"Detalles Producto."
-    },
-    "CART":{
-        "VACIAR":"Vaciar Carrito",
-        "CONTINUAR":"Continuar con la compra",
-        "SALIR": "Salir",
-        "PAGAR": "Pagar"
+     "SHOP":{
+        "AGRE":"Add to Cart",
+        "DETA" :"Product Details."
+        },
+        "CART":{
+        "VACIAR":"Empty Cart",
+        "CONTINUAR":"Continue Shopping",
+        "SALIR": "Exit",
+        "PAGAR": "Pay"
+        }
     }
-} 
