first cambio carrito8

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -27,7 +27,7 @@
     },
     "ANAC-DESC":{
       "LANUEZ":"Die gesunde Nuss, die dich mit Energie füllen wird",
-      "LOSA":"Die Anacarde sind die Nüsse des Anacardium-Baumes. Dieser Baum stammt ursprünglich aus Südamerika und wird hauptsächlich in Brasilien, Indien und Nigeria angebaut. Anacarde sind kleine Nüsse mit einer harten Schale, die sich in einer voller Harnsaure befindet. Diese Nüsse sind essbar und haben einen süßen und leicht salzigen Geschmack. Anacarde werden häufig in der Küche zum Backen von Desserts, Soßen, Pasten und als gesundes Snack verwendet. Sie werden auch in der Kosmetikindustrie und in der Herstellung von Haarpflegeprodukten verwendet.",
+      "LOSA":"Die Anacarde sind die Nüsse des Anacardium-Baumes. Dieser Baum stammt ursprünglich aus Südamerika und wird hauptsächlich in Brasilien, Indien und Guinea-Bissau angebaut. Anacarde sind kleine Nüsse mit einer harten Schale, die sich in einer voller Harnsaure befindet. Diese Nüsse sind essbar und haben einen süßen und leicht salzigen Geschmack. Anacarde werden häufig in der Küche zum Backen von Desserts, Soßen, Pasten und als gesundes Snack verwendet. Sie werden auch in der Kosmetikindustrie und in der Herstellung von Haarpflegeprodukten verwendet.",
       "BENE":"Vorteile",
       "BENE1":"Anacarde sind reich an ballaststoffreicher Ernährung, was helfen kann, den Darmtransit und die Verdauung zu regulieren.",
       "BENE2":"Sie enthalten viel Magnesium, was helfen kann, Stress abzubauen, die Herzgesundheit zu verbessern und die Knochen zu stärken.",
