--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -27,7 +27,7 @@
   },
     "ANAC-DESC":{
     "LANUEZ":"A noz saudável que vai te encher de energia",
-    "LOSA":"As castanhas-de-caju são as nozes da planta do caju. Essa planta é originária da América do Sul e é cultivada principalmente no Brasil, Índia e Nigéria. As castanhas-de-caju são pequenas nozes com uma casca dura que se encontra dentro de uma casca cheia de ácido úrico. Essas nozes são comestíveis e têm um sabor doce e levemente salgado. As castanhas-de-caju são comumente usadas na culinária para fazer sobremesas, molhos, massas e como um lanche saudável, também são usadas na indústria cosmética e na elaboração de produtos para cuidado de cabelo.",
+    "LOSA":"As castanhas-de-caju são as nozes da planta do caju. Essa planta é originária da América do Sul e é cultivada principalmente no Brasil, Índia e Guinea-Bissau. As castanhas-de-caju são pequenas nozes com uma casca dura que se encontra dentro de uma casca cheia de ácido úrico. Essas nozes são comestíveis e têm um sabor doce e levemente salgado. As castanhas-de-caju são comumente usadas na culinária para fazer sobremesas, molhos, massas e como um lanche saudável, também são usadas na indústria cosmética e na elaboração de produtos para cuidado de cabelo.",
     "BENE":"Benefícios",
     "BENE1":"As castanhas-de-caju são ricas em fibra dietética, o que pode ajudar a regular o trânsito intestinal e melhorar a digestão.",
     "BENE2":"Contêm uma grande quantidade de magnésio, o que pode ajudar a reduzir o estresse, melhorar a saúde do coração e fortalecer os ossos.",
