--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,7 +28,7 @@
      },
      "ANAC-DESC":{
         "LANUEZ":"La nuez saludable que te llenará de energía",
-         "LOSA":"Los anacardos son las nueces de la planta del anacardo. Esta planta es originaria de América del Sur y se cultiva principalmente en Brasil, India y Nigeria. Los anacardos son pequeñas nueces con una cáscara dura que se encuentra dentro de una cáscara llena de ácido urico. Estas nueces son comestibles y tienen un sabor dulce y ligeramente salado. Los anacardos se utilizan comúnmente en la cocina para hacer postres, salsas, pastas y como una merienda saludable,también son utilizados en la industria cosmética y en la elaboración de productos para el cuidado del cabello.",
+         "LOSA":"Los anacardos son las nueces de la planta del anacardo. Esta planta es originaria de América del Sur y se cultiva principalmente en Brasil, India y Guinea-Bissau. Los anacardos son pequeñas nueces con una cáscara dura que se encuentra dentro de una cáscara llena de ácido urico. Estas nueces son comestibles y tienen un sabor dulce y ligeramente salado. Los anacardos se utilizan comúnmente en la cocina para hacer postres, salsas, pastas y como una merienda saludable,también son utilizados en la industria cosmética y en la elaboración de productos para el cuidado del cabello.",
          "BENE":"Beneficios",
          "BENE1":"Los anacardos son ricos en fibra dietética, lo que puede ayudar a regular el tránsito intestinal y mejorar la digestión. ",
          "BENE2":"Contienen una gran cantidad de magnesio, lo que puede ayudar a reducir el estrés, mejorar la salud del corazón y fortalecer los huesos. ",
