modificado header y jumbotron3

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,6 +1,6 @@
 {
   "HOME": {
-    "COMP": "Wettbewerb in afrikanischen Agrarprodukten",
+    "COMP": "Kompetenz  in afrikanischen Agrarprodukten",
     "SOST": "Nachhaltigkeit in ökonomischer, sozialer und ökologischer Hinsicht!",
     "DESC": "Entdecke unsere Produkte",
     "AFRI": "AFRI AGRARIA steht für den Welthandel von natürlichen Rohstoffen. Wir sind Lieferanten von Rohstoffen für die Kosmetikindustrie. Unsere Hauptprodukte sind Moringa Organic, Baobab und Hibiscus. Die höchsten Ansprüche unserer Kunden an Qualität und Preis sind unsere Priorität.",
